# AISD-2026-PROJEKT

./: README.md  models2.py
cpp/: .gitignore  CMakeLists.txt  Makefile
cpp/src/: algorithm.cpp  algorithm.hpp  api.cpp  models2.cpp  models2.hpp
py/: archive.py  archive_tests.py  geometry.py  main.py  models.pyi  range_query.py  test.py
